# lib/credit_stake_web/views/article_view.ex
@@ -1,0 +1,19 @@
+defmodule CreditStakeWeb.ArticleView do
+  use CreditStakeWeb, :view
+  alias CreditStakeWeb.ArticleView
+
+  def render("index.json", %{articles: articles}) do
+    %{data: render_many(articles, ArticleView, "article.json")}
+  end
+
+  def render("show.json", %{article: article}) do
+    %{data: render_one(article, ArticleView, "article.json")}
+  end
+
+  def render("article.json", %{article: article}) do
+    %{
+      id: article.id,
+      title: article.title
+    }
+  end
+end
